// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WangTileChunk constructor should initialize a 1 dimensional chunk 1`] = `
Object {
  "0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
}
`;

exports[`WangTileChunk constructor should initialize a 2 dimensional chunk 1`] = `
Object {
  "0,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
}
`;

exports[`WangTileChunk constructor should initialize a 3 dimensional chunk 1`] = `
Object {
  "0,0,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,0,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,0,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,1,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,1,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,1,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,2,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,2,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "0,2,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,0,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,0,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,0,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,1,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,1,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,1,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,2,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,2,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "1,2,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,0,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,0,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,0,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,1,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,1,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,1,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,2,0": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,2,1": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
  "2,2,2": Set {
    WangTile {
      "data": "-",
      "edges": Object {},
      "probability": 1,
    },
    WangTile {
      "data": "|",
      "edges": Object {},
      "probability": 1,
    },
  },
}
`;

exports[`WangTileChunk observe() should generate contiguous rooms. 1`] = `
"
  ║ ╔═╗        ╔╝       
  ║╔╝╔╝  ╔╗  ╔╗║    ╔══╗
  ║╚═╝   ║╚╗ ║║╚╗   ╚╗ ║
  ║  ╔══╗║╔╝╔╝╚╗║╔═══╝ ║
  ║╔╗╚╗╔╝╚╝ ║  ║║╚╗    ╚
╔╗╚╝║ ╚╝ ╔╗ ║  ╚╝ ║╔╗  ╔
╚╝  ╚═╗ ╔╝║ ║    ╔╝╚╝  ║
      ║╔╝ ╚╗║    ╚╗  ╔═╝
      ╚╝   ╚╝     ║  ║╔═
  ╔╗     ╔═╗╔═════╝ ╔╝║ 
 ╔╝╚╗    ║ ║║╔═══╗ ╔╝ ╚╗
 ║  ╚═╗ ╔╝ ╚╝╚═══╝╔╝   ║
╗║    ╚═╝    ╔═╗  ║    ║
║║    ╔═╗    ║╔╝  ║   ╔╝
╚╝ ╔╗ ║╔╝   ╔╝║╔══╝   ║ 
   ║║ ║╚╗╔╗ ╚╗╚╝      ║ 
  ╔╝║ ╚═╝║╚══╝     ╔══╝╔
  ╚═╝ ╔══╝   ╔╗    ╚═╗╔╝
     ╔╝      ║╚╗╔════╝╚╗
╔╗ ╔═╝     ╔╗║ ╚╝    ╔═╝
╚╝ ║╔═══╗  ║║║       ║ ╔
  ╔╝╚═╗ ║  ║╚╝  ╔═══╗║ ║
  ║   ║╔╝  ║    ║   ╚╝ ║
  ║   ║║   ║╔═╗ ║      ║
"
`;

exports[`WangTileChunk observe() should observe all the tiles. 1`] = `
"
---||
|-|--
||-|-
||---
-|---
-|--|
|||-|
-|---
-----
---|-
"
`;

exports[`WangTileChunk observe() should observe all the tiles. 2`] = `
Array [
  Array [
    2,
    5,
  ],
  Array [
    0,
    0,
  ],
  Array [
    0,
    1,
  ],
  Array [
    0,
    2,
  ],
  Array [
    0,
    3,
  ],
  Array [
    0,
    4,
  ],
  Array [
    0,
    5,
  ],
  Array [
    1,
    5,
  ],
  Array [
    1,
    4,
  ],
  Array [
    1,
    3,
  ],
  Array [
    1,
    2,
  ],
  Array [
    1,
    1,
  ],
  Array [
    1,
    0,
  ],
  Array [
    2,
    4,
  ],
  Array [
    2,
    3,
  ],
  Array [
    2,
    2,
  ],
  Array [
    2,
    1,
  ],
  Array [
    2,
    0,
  ],
  Array [
    0,
    6,
  ],
  Array [
    1,
    6,
  ],
  Array [
    2,
    6,
  ],
  Array [
    0,
    7,
  ],
  Array [
    1,
    7,
  ],
  Array [
    2,
    7,
  ],
  Array [
    0,
    8,
  ],
  Array [
    0,
    9,
  ],
  Array [
    1,
    8,
  ],
  Array [
    1,
    9,
  ],
  Array [
    2,
    8,
  ],
  Array [
    2,
    9,
  ],
  Array [
    3,
    0,
  ],
  Array [
    3,
    1,
  ],
  Array [
    3,
    2,
  ],
  Array [
    3,
    3,
  ],
  Array [
    3,
    4,
  ],
  Array [
    3,
    5,
  ],
  Array [
    3,
    6,
  ],
  Array [
    3,
    7,
  ],
  Array [
    3,
    8,
  ],
  Array [
    3,
    9,
  ],
  Array [
    4,
    0,
  ],
  Array [
    4,
    1,
  ],
  Array [
    4,
    2,
  ],
  Array [
    4,
    3,
  ],
  Array [
    4,
    4,
  ],
  Array [
    4,
    5,
  ],
  Array [
    4,
    6,
  ],
  Array [
    4,
    7,
  ],
  Array [
    4,
    8,
  ],
  Array [
    4,
    9,
  ],
]
`;

exports[`WangTileChunk observe() should observe and restrict tilesets by constraint. 1`] = `
"
 -= -= -= 
= -= -= -=
= -= -= -=
= -= -= -=
= -= -= -=
"
`;

exports[`WangTileChunk observe() should observe the center of the chunk first. 1`] = `
"
░░░░░
░░░░░
░░░░░
░░░░░
░░-░░
░░░░░
░░░░░
░░░░░
░░░░░
░░░░░
"
`;
